--- a/src/ServiceManagement/HDInsight/Commands.HDInsight/Commands.HDInsight.csproj
+++ b/src/ServiceManagement/HDInsight/Commands.HDInsight/Commands.HDInsight.csproj
@@ -48,24 +48,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.Data.Edm.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Data.Edm.5.6.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.OData, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.Data.OData.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Data.OData.5.6.0\lib\net40\Microsoft.Data.OData.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Services.Client, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.Data.Services.Client.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Data.Services.Client.5.6.0\lib\net40\Microsoft.Data.Services.Client.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Hadoop.Client, Version=1.3.1.6, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Hadoop.Client, Version=1.3.3.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.Hadoop.Client.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Hadoop.Client.1.3.3.1\lib\net40\Microsoft.Hadoop.Client.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.HDInsight.Net.Http.Formatting, Version=1.3.1.6, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.HDInsight.Net.Http.Formatting, Version=1.3.3.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.HDInsight.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Hadoop.Client.1.3.3.1\lib\net40\Microsoft.HDInsight.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\..\..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
@@ -84,21 +81,24 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Microsoft.WindowsAzure.Common.1.4.0\lib\net45\Microsoft.WindowsAzure.Common.NetFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight, Version=1.3.1.6, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.WindowsAzure.Management.HDInsight.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.8.0.0\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight.Framework, Version=1.3.1.6, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight, Version=1.3.3.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.WindowsAzure.Management.HDInsight.Framework.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.WindowsAzure.Management.HDInsight.1.3.3.1\lib\net40\Microsoft.WindowsAzure.Management.HDInsight.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight.Framework.Core, Version=1.3.1.6, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight.Framework, Version=1.3.3.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.WindowsAzure.Management.HDInsight.Framework.Core.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Hadoop.Client.1.3.3.1\lib\net40\Microsoft.WindowsAzure.Management.HDInsight.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Management.HDInsight.Framework.Core, Version=1.3.3.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Microsoft.Hadoop.Client.1.3.3.1\lib\net40\Microsoft.WindowsAzure.Management.HDInsight.Framework.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=3.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\..\source\hdx-cli\Bin\Unsigned\Debug\Microsoft.WindowsAzure.Management.HDInsight\Microsoft.WindowsAzure.Storage.dll</HintPath>
+      <HintPath>..\..\..\packages\WindowsAzure.Storage.3.0.3.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -119,6 +119,9 @@
       <HintPath>..\..\..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Spatial, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Spatial.5.6.0\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -146,10 +149,10 @@
     <Compile Include="Cmdlet\NewAzureHDInsightStreamingJobDefinitionCmdlet.cs" />
     <Compile Include="Cmdlet\RemoveClusterHDInsightClusterCmdlet.cs" />
     <Compile Include="Cmdlet\RevokeAzureHDInsightHttpServicesAccessCmdlet.cs" />
+    <Compile Include="Cmdlet\SetAzureHDInsightClusterSizeCmdlet.cs" />
     <Compile Include="Cmdlet\SetAzureHDInsightDefaultStorageCmdlet.cs" />
     <Compile Include="Cmdlet\StartAzureHDInsightJobCmdlet.cs" />
     <Compile Include="Cmdlet\StopAzureHDInsightJobCmdlet.cs" />
-    <Compile Include="Cmdlet\SetAzureHDInsightClusterSizeCmdlet.cs" />
     <Compile Include="Cmdlet\UseAzureHDInsightClusterCmdlet.cs" />
     <Compile Include="Cmdlet\WaitAzureHDInsightJobCmdlet.cs" />
     <Compile Include="Model\Commands\BaseCommandInterfaces\IAddAzureHDInsightConfigValuesBase.cs" />
@@ -193,10 +196,10 @@
     <Compile Include="Model\Commands\CommandImplementations\NewAzureHDInsightSqoopJobDefinitionCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\NewAzureHDInsightStreamingJobDefinitionCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\RemoveAzureHDInsightClusterCommand.cs" />
+    <Compile Include="Model\Commands\CommandImplementations\SetAzureHdInsightClusterSizeCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\SetAzureHDInsightDefaultStorageCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\StartAzureHDInsightJobCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\StopAzureHDInsightJobCommand.cs" />
-    <Compile Include="Model\Commands\CommandImplementations\SetAzureHdInsightClusterSizeCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\UseAzureHDInsightClusterCommand.cs" />
     <Compile Include="Model\Commands\CommandImplementations\WaitAzureHDInsightJobCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IAddAzureHDInsightConfigValuesCommand.cs" />
@@ -216,10 +219,10 @@
     <Compile Include="Model\Commands\CommandInterfaces\INewAzureHDInsightSqoopJobDefinitionCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\INewAzureHDInsightStreamingJobDefinitionCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IRemoveAzureHDInsightClusterCommand.cs" />
+    <Compile Include="Model\Commands\CommandInterfaces\ISetAzureHDInsightClusterSizeCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\ISetAzureHDInsightDefaultStorageCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IStartAzureHDInsightJobCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IStopAzureHDInsightJobCommand.cs" />
-    <Compile Include="Model\Commands\CommandInterfaces\ISetAzureHDInsightClusterSizeCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IUseAzureHDInsightClusterCommand.cs" />
     <Compile Include="Model\Commands\CommandInterfaces\IWaitAzureHDInsightJobCommand.cs" />
     <Compile Include="Model\DataObjects\AzureHDInsightCapabilities.cs" />
